src/objects/Game__c.object
<CustomObject>
    <fields>
        <fullName>Away_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Away Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Away_Team_Name__c</fullName>
        <formula>Away_Team__r.Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Away Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Away_Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Away Team</label>
        <referenceTo>Group_Membership__c</referenceTo>
        <relationshipLabel>Games (Away Game)</relationshipLabel>
        <relationshipName>Away_Games</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <picklist>
            <picklistValues>
                <fullName>Field 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Tournament_Group__c</referenceTo>
        <relationshipLabel>Games</relationshipLabel>
        <relationshipName>Games</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Home_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Home Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Team_Name__c</fullName>
        <formula>Home_Team__r.Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Home Team</label>
        <referenceTo>Group_Membership__c</referenceTo>
        <relationshipLabel>Home Games</relationshipLabel>
        <relationshipName>Home_Games</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Games</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loss__c</fullName>
        <formula>IF(  Home_Score__c   &gt;   Away_Score__c  ,  Away_Team__c ,  IF(  Home_Score__c  &lt;   Away_Score__c  ,  Home_Team__c , &apos;&apos;) )</formula>
        <label>loss</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>win__c</fullName>
        <formula>IF ( Home_Score__c   &gt;  Away_Score__c  ,  Home_Team__c ,   IF( Home_Score__c  &lt;  Away_Score__c  ,   Away_Team__c  , &apos;&apos;)  )</formula>
        <label>win</label>
        <type>Text</type>
    </fields>
    <label>Game</label>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>